home/home.css
/*FONTS*/
@font-face {
  font-family: Sofia Bold;
  src: url(../SofiaProBold.ttf);
}
@font-face {
  font-family: Sofia Medium;
  src: url(../SofiaProMedium.ttf);
}
@font-face {
  font-family: Sofia SemiBold;
  src: url(../SofiaProSemiBold.ttf);
}

*{
	margin: 0;
	padding: 0;
}

html {
 /*background-image: url("Background.png");*/
 margin: 0;
 padding: 0;
}

/* BODY */
/*
body {
	background-image: url(Background.png);
	background-size: 100%;
	background-repeat: no-repeat;
	background-color: #EFE7FF;
	-webkit-font-smoothing: subpixel-antialiased;
}*/

/* INITIAL PAGE */

#title {
  font-family: 'Sofia SemiBold';
  font-size: 65px;
  color: #8E57F0;
  text-align: center;
  margin-top: 130px;
}

#subtitle {
  font-family: 'Sofia SemiBold';
  font-size: 35px;
  color: #A375F3;
  text-align: center;
  margin-top: 15px;
}

/* NAVIGATION BAR */

nav {
  top: 0;
  right: 0;
  position: absolute;
  width: 100%;
  height: 75px;
  z-index: 100;
}

ul {
  float: right;
  margin-right: 20px;
}

ul li {
  list-style: none;
  display: inline-block;
}

ul li a {
  display: block;
  text-decoration: none;
  text-align: right;
  font-size: 16px;
  font-family: 'Sofia Medium';
  color: #BF9FF8;
  line-height: 75px;
  padding: 0 20px;
  transition: 0.3s;
}

ul li a:hover {
  color: #8E57F0;
}

/* LANDING */
.initial{
	background-image: url(landing-bkg.png);
	background-size: 100%;
	background-repeat: no-repeat;
	height: 100%;
	padding: 20px;
	position: relative;
	top: 0px;
}
/* OUR PHILOSOPHY */

.our-philosophy {
  margin-left: auto;
  margin-right: auto
  text-align: center;
  margin-bottom: 100px;
  width: 80%;
}

.left {
  display: inline-block;
  width: 40%;
  text-align: left;
}

.right {
  display: inline-block;
  width: 40%;
  vertical-align: top;
  margin-top: -10px;
}

h3 {
  font-family: 'Sofia SemiBold';
  font-size: 35px;
  line-height: 45px;
  color: #8E57F0;
  text-align: left;
}

p {
  font-family: 'Sofia Medium';
  font-size: 20px;
  color: #4B5161;
  line-height: 30px;
}


/*OPPORTUNITIES*/
.curly-images::before{
	position: relative;
	top: 70px;
	content: url("opportunities-frontcover.png") ;
	margin: 0px;
	padding: 0px;
}
.curly-images::after{
	position: relative;

	content: url("opportunities-backcover.png") ;
	margin: 0px;
	padding: 0px;
}

#opportunities {
	padding: 50px 135px 50px 135px;
	background-image: url("opportunities-bkg.png");
	background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
	background-repeat: no-repeat;
	background-size:cover;
	font-family: "Sofia Medium";
}

.grid-container{
	margin: 0px 3% 10% 0%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 20px 50px;
}

.grid-container img{
	height: 55px;
}

.grid-container div{
	border-radius: 15px;
	box-shadow: inset 0 0 10px #FFFFFF;
	background-color: rgba(255, 255, 255, .97);
	padding: 35px 30px;
	box-shadow: 0 0 11px rgba(255, 192, 227, .3); 
	transition: box-shadow .2s;
}
.grid-container div:hover{
	box-shadow: 0 0 11px rgba(255, 192, 227, 1); 
}
.grid-container a{
	text-decoration: none;
	background-color: #3EA6FF;
	padding: 10px 20px;
	border-radius: 20px;
	color: white;
}

#opportunities h2{
	font-family: "Sofia SemiBold";
	margin: 10% 0% 0% 0%;
	text-align: center;
	color: white;
	font-size: 3.5rem;
	letter-spacing: 1px;
	text-shadow: 0px 0px 15px rgba(0,0,0,.1), 0px 0px 15px #FFC0E3;

}
#opportunities h3{
	letter-spacing: .5px;
	margin: 10px 0px 80px 10px;
	text-align: center;
	color: white;
	font-size: 1.3rem;
	text-shadow: 0px 4px 4px rgba(0,0,0,.25);
}

#opportunities h4{
	margin: 10px 0px 0px 0px;
	color: #8E57F0;
	font-size: 1.7rem;
}
#opportunities p{
	margin: 10px 0px 20px 0px;
	line-height: 1.5;
	color: #A375F3;
	font-size: 1.1rem;
}

#magazines{
	padding: 5px 135px 200px 135px;
}
#magazines h2{
	font-size: 3.3rem;
	font-family: "Sofia Medium";
	margin: 10% 0% 0% 0%;
	text-align: center;
	color: #8E57F0;
}
#magazines h3{
	font-family: "Sofia Medium";
	font-size: 2rem;
	text-align: center;
	color: #A579F3;
}
.magazine-container{
	text-align:center;
	display: grid;
	grid-template-columns: repeat(4, 1fr)
}
.magazine-container img{
	width: 100%;
	max-width: 220px;
	margin: 0;
	padding: 0;
}
.magazine-container p{
	color: #FFC0E3;
	font-size: 1.3rem;
	font-family: "Sofia SemiBold";
	margin: 38px 0px 0px 0px;
}

@media only screen and (max-width: 900px) {
  .grid-container{
    	grid-template-columns: 1fr;
  }
  .magazine-container{
    	grid-template-columns: 1fr;
  }
}

#services {
  padding: 200px 0px 0px 0px;
  background-image: url("ourservices-background.png");
  background-repeat: no-repeat;
  background-size:cover;
}

#services h2 {
  font-size: 3.3rem;
  font-family: "Sofia SemiBold";
  margin-left: 15%;
  margin-bottom: 10px;
  text-align: left;
  color: #fff;
}

#services p {
  font-family: "Sofia SemiBold";
  font-size: 1.5rem;
  text-align: left;
  margin-left: 15%;
  margin-bottom: 50px;
  color: #fff;
  opacity: 70%;
}

#services img {
  width: 70%;
}

#timeline {
  text-align: center;
  margin-bottom: 100px;
}

@media only screen and (max-width: 600px) {
  #services p {
    width: 70%;
  }
}

@media only screen and (min-width: 1000px) {
  #services p {
    width: 30%;
  }
}

footer{
	width: 100%;
	background-image: url(footer.png);
	background-size:cover;
	position: absolute;
	background-repeat: no-repeat;
}
footer .side-by-side{
	display: flex;
	flex-direction: row;
}
footer .text{
	display: flexbox;
	width: 30%;
	color: white;
	margin-left: 100px;

}
footer h2{
	margin-left: 100px;
	padding-top: 12%;
	top: 50px;
	color: white;
	font-size: 2.5rem;
	font-family: "Sofia SemiBold";
}
footer p{
	color: white;
	font-size: 1.1rem;
	line-height: 1.6;
}
footer #links{
	margin-left: 150px;
	display: grid;
	font-size: 1.2rem;
	grid-template-columns: 1fr 1fr;
	grid-column-gap: 80px;
	grid-row-gap: 10px;
}
footer #links a{
	font-family: "Sofia Medium";
	text-decoration: none;
	color: white;
	transition: text-decoration .3s;
}
footer #links a:hover{
	text-decoration: underline;
}

